# realworld-haskell

./: .envrc  .envrc.template  .gitignore  .hlint.yaml  CHANGELOG.md  README.md  conduit.cabal  haskell-conduit.cabal  justfile  logfile  package.yaml  realworld-haskell.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/1e102d49/: cabal_macros.h
.stack-work/ghci/81d9992a/: cabal_macros.h
.stack-work/ghci/95e71a6a/: cabal_macros.h
.stack-work/ghci/a069ee94/: cabal_macros.h
.stack-work/ghci/cb09474f/: cabal_macros.h
.stack-work/install/aarch64-osx/680f5089a4db57421c1e9d501c3492793cf4b32e1ed6afcc4b80abecbb33431d/9.8.4/doc/realworld-haskell-0.1.0.0/: LICENSE
.stack-work/install/aarch64-osx/680f5089a4db57421c1e9d501c3492793cf4b32e1ed6afcc4b80abecbb33431d/9.8.4/lib/aarch64-osx-ghc-9.8.4/: libHSrealworld-haskell-0.1.0.0-GUDM7XIZRC4KKws6EBPsDo-ghc9.8.4.dylib
.stack-work/install/aarch64-osx/680f5089a4db57421c1e9d501c3492793cf4b32e1ed6afcc4b80abecbb33431d/9.8.4/lib/aarch64-osx-ghc-9.8.4/realworld-haskell-0.1.0.0-GUDM7XIZRC4KKws6EBPsDo/RealWorld/: App.dyn_hi  App.hi
.stack-work/install/aarch64-osx/680f5089a4db57421c1e9d501c3492793cf4b32e1ed6afcc4b80abecbb33431d/9.8.4/pkgdb/: package.cache  realworld-haskell-0.1.0.0-GUDM7XIZRC4KKws6EBPsDo.conf
app/: Main.hs
dev/: Main.hs
nix/modules/flake-parts/: devshell.nix  haskell.nix
sql/migrations/: 1707130033-add-users-table.sql  1708233804-add-followings-table.sql  1708238352-add-articles-table.sql  1708604858-add-comments-table.sql  1708654065-add-favorites-table.sql
src/: Main.hs
src/Conduit/: App.hs
src/Conduit/Domain/: Repo.hs
src/Conduit/Domain/User/: Entity.hs  Error.hs  Repo.hs  UseCase.hs
src/Conduit/Domain/User/Gateway/: Token.hs
src/Conduit/Domain/User/Service/: Password.hs
src/Conduit/Infra/: Json.hs  System.hs
src/Conduit/Infra/Component/: Database.hs  HttpServer.hs
src/Conduit/Infra/Database/: PGUserRepository.hs  Repo.hs  Tx.hs
src/Conduit/Infra/Gateway/: JwtToken.hs
src/Conduit/Infra/Service/: BcryptPasswordService.hs
src/Conduit/Infra/Web/: Error.hs  ErrorResponse.hs  Routes.hs
src/Conduit/Infra/Web/Controller/: User.hs
src/Conduit/Util/: BoundedText.hs  Controller.hs  Database.hs  Env.hs  Maybe.hs  Pool.hs
src/RealWorld/: App.hs
src/RealWorld/Domain/: Repo.hs
src/RealWorld/Domain/Adapter/Gateway/: PasswordGateway.hs  TokenGateway.hs
src/RealWorld/Domain/Adapter/Manager/: TxManager.hs
src/RealWorld/Domain/Adapter/Repository/: ArticleRepository.hs  CommentRepository.hs  FavoriteRepository.hs  UserRepository.hs
src/RealWorld/Domain/Command/Article/: UseCase.hs  Value.hs
src/RealWorld/Domain/Command/Article/Entity/: Article.hs  Comment.hs  Favorite.hs
src/RealWorld/Domain/Command/User/: UseCase.hs  Value.hs
src/RealWorld/Domain/Command/User/Entity/: User.hs
src/RealWorld/Domain/Query/: Data.hs  QueryService.hs  Service.hs
src/RealWorld/Domain/User/: Entity.hs  Error.hs  Repo.hs  Types.hs  UseCase.hs
src/RealWorld/Domain/User/Gateway/: Password.hs  Token.hs
src/RealWorld/Domain/User/Service/: Password.hs
src/RealWorld/Domain/Util/: BoundedText.hs  Maybe.hs
src/RealWorld/Infra/: Json.hs  System.hs
src/RealWorld/Infra/Component/: Database.hs  HttpServer.hs
src/RealWorld/Infra/Converter/: Aeson.hs  PostgreSQL.hs
src/RealWorld/Infra/Database/: PGArticleRepository.hs  PGCommentRepository.hs  PGQuery.hs  PGUserRepository.hs  PgArticleRepository.hs  PgCommentRepository.hs  PgFavoriteRepository.hs  PgQueryService.hs  PgUserRepository.hs  Repo.hs
src/RealWorld/Infra/Gateway/: BcryptPasswordGateway.hs  JwtToken.hs  JwtTokenGateway.hs
src/RealWorld/Infra/Interpreter/Adapter/Gateway/: PasswordGateway.hs  TokenGateway.hs
src/RealWorld/Infra/Interpreter/Adapter/Manager/: TxManager.hs
src/RealWorld/Infra/Interpreter/Adapter/Repository/: ArticleRepository.hs  CommentRepository.hs  FavoriteRepository.hs  QueryService.hs  UserRepository.hs
src/RealWorld/Infra/Manager/: PgTxManager.hs
src/RealWorld/Infra/Repository/: PgArticleRepository.hs  PgCommentRepository.hs  PgFavoriteRepository.hs  PgQuery.hs  PgUserRepository.hs
src/RealWorld/Infra/Service/: BcryptPasswordService.hs
src/RealWorld/Infra/Util/: Env.hs  Pool.hs
src/RealWorld/Infra/Web/: Auth.hs  ErrorResponse.hs  Errors.hs  Routes.hs  Schema.hs  Util.hs
src/RealWorld/Infra/Web/Controller/: Article.hs  User.hs
src/RealWorld/Infra/Web/Handler/: Types.hs
src/RealWorld/Infra/Web/Handler/Article/: CreateArticle.hs  CreateComment.hs  DeleteArticle.hs  DeleteComment.hs  Favorite.hs  Feed.hs  GetArticle.hs  ListArticle.hs  ListComment.hs  ListTag.hs  Unfavorite.hs  UpdateArticle.hs
src/RealWorld/Infra/Web/Handler/Profile/: Follow.hs  GetProfile.hs  Unfollow.hs
src/RealWorld/Infra/Web/Handler/User/: GetCurrentUser.hs  Login.hs  Registration.hs  UpdateUser.hs
src/RealWorld/Query/: Types.hs
src/RealWorld/Util/: BoundedText.hs  Controller.hs  Database.hs  Env.hs  Maybe.hs  Pool.hs
test/RealWorld/Domain/Command/: Fixture.hs  TestApp.hs
test/RealWorld/Domain/Command/Article/: ValueSpec.hs
test/RealWorld/Domain/Command/Article/Entity/: ArticleSpec.hs
test/RealWorld/Domain/Command/Interpreter/Gateway/: PasswordGateway.hs  TokenGateway.hs
test/RealWorld/Domain/Command/Interpreter/Manager/: TxManager.hs
test/RealWorld/Domain/Command/Interpreter/Repository/: UserRepository.hs
test/RealWorld/Domain/Command/User/: UseCaseSpec.hs  ValueSpec.hs
test/RealWorld/Domain/Command/User/Entity/: UserSpec.hs
test/RealWorld/Domain/Util/: BoundedTextSpec.hs
test/RealWorld/QuickCheck/: Instances.hs
