cabal-version:      2.4
name:               realworld-haskell
version:            0.1.0.0
license:            MIT
copyright:          2022 Eunmin Kim
maintainer:         srid@srid.ca
author:             Eunmin Kim
category:           Web
homepage:           https://srid.ca/realworld-haskell

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

library
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , aeson-casing
    , async
    , base                  >=4   && <5
    , bcrypt
    , data-default
    , data-has
    , directory
    , errors
    , exceptions
    , filepath
    , generic-lens
    , http-types
    , jwt
    , katip
    , lens
    , mtl
    , optics-core
    , pcre-heavy
    , postgresql-migration
    , postgresql-simple
    , profunctors
    , relude                >=1.0
    , resource-pool
    , safe
    , safe-exceptions
    , scotty
    , shower
    , time
    , ulid
    , unliftio-core
    , wai
    , wai-extra
    , with-utf8

  default-language:   Haskell2010
  exposed-modules:
    RealWorld.App
    RealWorld.Domain.Adapter.Gateway.PasswordGateway
    RealWorld.Domain.Adapter.Gateway.TokenGateway
    RealWorld.Domain.Adapter.Manager.TxManager
    RealWorld.Domain.Adapter.Repository.ArticleRepository
    RealWorld.Domain.Adapter.Repository.CommentRepository
    RealWorld.Domain.Adapter.Repository.FavoriteRepository
    RealWorld.Domain.Adapter.Repository.UserRepository
    RealWorld.Domain.Command.Article.Entity.Article
    RealWorld.Domain.Command.Article.Entity.Comment
    RealWorld.Domain.Command.Article.Entity.Favorite
    RealWorld.Domain.Command.Article.UseCase
    RealWorld.Domain.Command.Article.Value
    RealWorld.Domain.Command.User.Entity.User
    RealWorld.Domain.Command.User.UseCase
    RealWorld.Domain.Command.User.Value
    RealWorld.Domain.Query.Data
    RealWorld.Domain.Query.QueryService
    RealWorld.Domain.Util.BoundedText
    RealWorld.Domain.Util.Maybe
    RealWorld.Infra.Component.Database
    RealWorld.Infra.Component.HttpServer
    RealWorld.Infra.Converter.Aeson
    RealWorld.Infra.Converter.PostgreSQL
    RealWorld.Infra.Database.PgArticleRepository
    RealWorld.Infra.Database.PgCommentRepository
    RealWorld.Infra.Database.PgFavoriteRepository
    RealWorld.Infra.Database.PgQueryService
    RealWorld.Infra.Database.PgUserRepository
    RealWorld.Infra.Gateway.BcryptPasswordGateway
    RealWorld.Infra.Gateway.JwtTokenGateway
    RealWorld.Infra.Manager.PgTxManager
    RealWorld.Infra.System
    RealWorld.Infra.Util.Env
    RealWorld.Infra.Util.Pool
    RealWorld.Infra.Web.Controller.Article
    RealWorld.Infra.Web.Controller.User
    RealWorld.Infra.Web.ErrorResponse
    RealWorld.Infra.Web.Errors
    RealWorld.Infra.Web.Routes
    RealWorld.Infra.Web.Util

  other-modules:
  hs-source-dirs:     src

executable realworld-haskell
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  build-depends:
    , base               >=4.7 && <5
    , realworld-haskell

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

test-suite realworld-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_realworld_haskell
    RealWorld.Domain.Command.Article.Entity.ArticleSpec
    RealWorld.Domain.Command.Article.ValueSpec
    RealWorld.Domain.Command.Fixture
    RealWorld.Domain.Command.TestApp
    RealWorld.Domain.Command.User.Entity.UserSpec
    RealWorld.Domain.Command.User.UseCaseSpec
    RealWorld.Domain.Command.User.ValueSpec
    RealWorld.Domain.Util.BoundedTextSpec
    RealWorld.QuickCheck.Instances

  autogen-modules:    Paths_realworld_haskell
  hs-source-dirs:     test
  default-extensions:
    ConstraintKinds
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    , aeson
    , aeson-casing
    , base                      >=4.7 && <5
    , bcrypt
    , data-has
    , errors
    , exceptions
    , hspec
    , http-types
    , jwt
    , katip
    , pcre-heavy
    , postgresql-migration
    , postgresql-simple
    , QuickCheck
    , quickcheck-instances
    , quickcheck-string-random
    , realworld-haskell
    , relude
    , resource-pool
    , safe
    , safe-exceptions
    , scotty
    , time
    , ulid
    , wai
    , wai-extra

  default-language:   Haskell2010
